# Computational-math-problems

./: .gitignore  README.md
10x1-diff-equations/: build_and_run.sh  diff-equations.c
1x1-summation-error/: 1x1-summation-error.cabal
1x1-summation-error/app/: Main.hs
1x2-transcendental-functions/: 1x2-transcendental-functions.cabal
1x2-transcendental-functions/app/: Main.hs
2x1-derivatives/: build_and_run.sh  derivatives.c
3-integrals/: build_and_run.sh  integrals.c
4x1-monte-carlo/: monte_carlo.c
4x2-monte-carlo/: build_and_run.sh  monte_carlo.c
5x1-equations/: Graphical equation.xlsx
5x2-equations/: build_and_run.sh  equations.c
6-gauss/: build_and_run.sh  gauss.c
7-optimization/: optimization.xlsx
8-product-cart/: cart.xlsx
9-minimum/: CHANGELOG.md  LICENSE  minimum.cabal
9-minimum/app/: Main.hs
